@@ -5,6 +5,8 @@
 	  of port-specific files is now possible. (for exemple, a script under
 	  a different license or common code to recipes with only different 
 	  versions)
+	* A begin of revision-in-version-number implementation is made. It 
+	  does not work with every package manager or SCM.
 
 0.11:
 	* A beginning of implementation of scripts in Pkgfile’s functions has
